--- a/frontend/javascripts/dynexp/pika_test/views/setWellsA.html
+++ b/frontend/javascripts/dynexp/pika_test/views/setWellsA.html
@@ -7,28 +7,21 @@
 					<td class="rxn-type rxn-center">Reaction Type</td>
 					<td class="notes rxn-center">Notes</td>
 				</tr>
-				<tr>
-					<td class="posneg">A1. Positive Control</td>
-					<td class="rxn-center"><img style="width:20px" src="/images/dynexp/pika-test/Plus-Pink.svg"></td>
-					<td ng-show="notes[0]" ng-click="openNotes(0)" class="rxn-center notes-cursor"><img style="width:20px" src="/images/dynexp/pika-test/comment_on.svg"></td>
-					<td ng-show="!notes[0]" ng-click="openNotes(0)" class="rxn-center notes-cursor"><img style="width:20px" src="/images/dynexp/pika-test/comment_off.svg"></td>
-				</tr>
-				<tr>
-					<td class="posneg">A2. Negative Control</td>
-					<td class="rxn-center"><img style="width:20px" src="/images/dynexp/pika-test/Minus-Pink.svg"></td>
-					<td ng-show="notes[1]" ng-click="openNotes(1)" class="rxn-center notes-cursor"><img style="width:20px" src="/images/dynexp/pika-test/comment_on.svg"></td>
-					<td ng-show="!notes[1]" ng-click="openNotes(1)" class="rxn-center notes-cursor"><img style="width:20px" src="/images/dynexp/pika-test/comment_off.svg"></td>
-				</tr>
 				<tr ng-repeat="x in samples track by $index">
-					<td>
-						<span>A{{$index+3}}.</span>
-						<input type="text" ng-class="{'empty-input':!x.name}" placeholder="Enter Sample Name" class="exp-name H1" required ng-model="x.name"  ng-blur="updateWellA($index+3,x)"
-						my-enter="updateWellA($index+3,x)" focus-on="editExpNameMode">
+					<td ng-if="$index < 2" class="posneg">A{{$index+1}}. {{x.name}}</td>
+					<td ng-if="$index > 1">
+						<span>A{{$index+1}}.</span>
+						<input type="text" ng-class="{'empty-input':!x.name}" placeholder="Enter Sample Name" class="exp-name H1" required ng-model="x.name"  ng-blur="updateWellA($index,x)"
+						my-enter="updateWellA($index,x)" focus-on="editExpNameMode">
 					</td>
-					<td ng-show="x.name" class="rxn-center"><img style="width:20px" src="/images/dynexp/pika-test/Sample-Pink.svg"></td>
-					<td ng-show="!x.name" class="rxn-center"><img style="width:20px" src="/images/dynexp/pika-test/Sample-Pink-Empty.svg"></td>
-					<td ng-show="notes[$index+2]" ng-click="openNotes($index+2)" class="rxn-center notes-cursor"><img style="width:20px" src="/images/dynexp/pika-test/comment_on.svg"></td>
-					<td ng-show="!notes[$index+2]" ng-click="openNotes($index+2)" class="rxn-center notes-cursor"><img style="width:20px" src="/images/dynexp/pika-test/comment_off.svg"></td>
+					<td class="rxn-center" ng-if="$index == 0"><img style="width:20px" src="/images/dynexp/pika-test/Plus-Pink.svg"></td>
+					<td class="rxn-center" ng-if="$index == 1"><img style="width:20px" src="/images/dynexp/pika-test/Minus-Pink.svg"></td>
+					<td ng-show="x.name" class="rxn-center"  ng-if="$index > 1"><img style="width:20px" src="/images/dynexp/pika-test/Sample-Pink.svg"></td>
+					<td ng-show="!x.name" class="rxn-center" ng-if="$index > 1"><img style="width:20px" src="/images/dynexp/pika-test/Sample-Pink-Empty.svg"></td>
+
+					<td ng-show="!x.id" class="rxn-center notes-cursor"><img style="width:20px; opacity: .5;" src="/images/dynexp/pika-test/comment_off.svg"></td>
+					<td ng-show="x.id && x.notes" ng-click="openNotes($index, x)" class="rxn-center notes-cursor"><img style="width:20px" src="/images/dynexp/pika-test/comment_on.svg"></td>
+					<td ng-show="x.id && !x.notes" ng-click="openNotes($index, x)" class="rxn-center notes-cursor"><img style="width:20px;" src="/images/dynexp/pika-test/comment_off.svg"></td>
 				</tr>
 			</table>
 
