--- a/frontend/javascripts/dynexp/pika_test/views/results.html
+++ b/frontend/javascripts/dynexp/pika_test/views/results.html
@@ -208,5 +208,5 @@
 </div>
 
 <div ng-show="analyzing" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-	<h3 ng-show="analyzing">Analyzing your results.<img src="/dynexp/libs/images/loading.gif"> </h3>
+	<h3 ng-show="analyzing">Analyzing your results.<img src="/images/loading.gif"> </h3>
 </div>
