US63,62 - improve well layout

--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -274,3 +274,28 @@ H3-Amplification {
   font-size: 13px;
   line-height: 16.25px;
 }
+
+.XB2 {
+  font-family: "dinot-regular";
+  font-size: 15px;
+  line-height: 20px;  
+}
+
+.XB2B {
+  font-family: "dinot-bold";
+  font-size: 15px;
+  line-height: 20px;  
+}
+
+.XB2M {
+  font-family: "dinot-medium";
+  font-size: 15px;
+  line-height: 20px;  
+}
+
+.XG1 {
+  font-family: "dinot-regular";
+  font-size: 8px;
+  font-weight: normal;
+  line-height: 12px;
+}
