--- a/frontend/stylesheets/plate-layout.scss
+++ b/frontend/stylesheets/plate-layout.scss
@@ -2,16 +2,65 @@
 
 .selection-section{
 	font-family: 'dinot-medium';
-	h4{
-		font-family: 'dinot-bold';
-		font-size: 13px;
-	}
+  margin: 20px;
+  box-shadow: 0 2px 3px #aaa;
+  background: #fff;
 
 	hr{
 		border: 1px solid black;
 		margin-top: 5px;
 		margin-bottom: 10px;
 	}
+
+  .sample-target-section{
+    width: 75%;
+    display: inline-block;
+    vertical-align: top;
+
+    .inline-block{
+      display: inline-block;
+      vertical-align: top;
+      position: relative;
+
+      .h4{
+        margin: 10px 0;
+      }
+
+      .quantity-input{
+        width: 100%;
+        border-bottom: 1px solid #000;
+        border-left: none;
+        border-top: none;
+        height: 40px;
+        border-right: none;
+        outline: none;
+        color: #888;
+      }
+    }
+  }
+
+  .clear-selection-section{
+    width: 25%;
+    display: inline-block;
+    vertical-align: top;
+    padding: 20px;
+
+    .clear-button{
+      cursor: pointer;
+      padding: 0;
+      margin: 0;
+      border: 1px solid #000;
+      border-radius: 3px;
+      overflow: hidden;
+      background-color: #fff;
+      text-align: center;
+      padding: 9px;
+      &:hover{
+        background-color: #000;
+        color: #fff;
+      }
+    }
+  }
 }
 
 /*::-webkit-scrollbar {
@@ -44,15 +93,20 @@ background: repeating-linear-gradient(-60deg, #F5F5F5, #F5F5F5 1px, white 4px, w
 .testing-clicking{
 	cursor: pointer;
 	margin-bottom: 0px;
-	padding: 5px 15px 5px 5px;
+	padding: 10px 20px 10px 10px;
   position: relative;
+
+  white-space: nowrap;
+  overflow: hidden;
+  width: 100%;
+  text-overflow: ellipsis;      
 }
 
 .sample-target-section{
 	background-color: white;
-	border: 1px solid #f5f5f5;
+	border-right: 1px solid #eee;
 	box-shadow: 0px 1px 0px 0px #ABABAB;
-	padding-top: 10px;
+	padding: 20px;
 }
 
 .span-target-color{
@@ -60,44 +114,57 @@ background: repeating-linear-gradient(-60deg, #F5F5F5, #F5F5F5 1px, white 4px, w
 	height: 10px;
 	display: inline-block;
 	margin-right: 5px;
+  border-radius: 50%;
+  border: 1px solid #ccc;
 }
 
 .span-arrow-down{
-  background: url(/images/select2.png) no-repeat -3px -8px transparent;
+  background: url(/images/arrow-down_white.png) no-repeat 0px 0px transparent;
+  background-size: 10px 8px;
   width: 10px;
   height: 10px;
   display: inline-block;
-  margin-top: 3px;
+  margin-top: 7px;
   position: absolute;
-  right: 5px;
+  right: 10px;
 }
 
 .options-div{
 	position: absolute !important;
 	background-color: white;
 	border: 1px solid #ccc;
-	border-radius: 3px;
-	border-top: 0;
+	border-radius: 3px;	
 	z-index: 5;
-	width: calc(100% - 30px);
+	width: calc(100% - 40px);
+  overflow: auto;
 	//cursor: pointer;
 	//top: -84px;
 	//visibility: hidden;
 	ul {
   list-style: none;
-  padding: 0;
+  padding: 5px;
   margin: 0;
+	// overflow: scroll;
+	// max-height:  122px;
+
+  
   //display: flex;
   //flex-direction: column;
   //flex-wrap: wrap;
-	overflow: scroll;
-	max-height:  122px;
   //width: 300px;
   //height: 200px;
+
+  li.active,
+  li:hover{
+    background: #00AEEF;
+    color: #fff;
+    border-radius: 3px;
+  }
 }
+
 li {
   //height: 12.5%;
-	padding: 5px;
+	padding: 8px;
 	cursor: pointer;
 }
 .ul-height{
@@ -108,6 +175,9 @@ li {
 }
 }
 
+.samples-div{
+  width: calc(100% - 20px);
+}
 
 .plate-layout-wells {
   -webkit-user-select: none;
@@ -115,11 +185,19 @@ li {
   -ms-user-select: none;
   user-select: none;
 	background-color: white;
+  box-shadow: 0 2px 3px #aaa;
 
 
 	.sample-name,.target-name{
-		font-family: 'dinot-bold';
+		// font-family: 'dinot-bold';
 	}
+
+  .sample-name{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 120px;
+  }
 
 	.sample-underline{
 		border: 1px solid gray;
@@ -143,6 +221,7 @@ li {
     font-family: 'dinot-regular';
     font-size: 12px;
     text-align: center;
+    height: 20px;
 
     &.dragged {
       background: #7DC2E6;
@@ -228,27 +307,34 @@ li {
 	vertical-align: top;
 }
 
+.targetInfo{
+  white-space: nowrap;
+  overflow: hidden;
+  width: 95px;
+  text-overflow: ellipsis;  
+}
+
 .no-targetBorder{
-	border: 1px solid #C6C6C6;
-  display: none;
+	border: 1px solid #C6C6C6;  
 }
 
 .numberCircle {
-    width: 25px;
-    line-height: 22px;
-		height: 25px;
-    border-radius: 50%;
-    text-align: center;
-    font-size: 12px;
-    border: 2px solid black;
-    display: inline-block;
-		cursor: pointer;
-		margin-right: 7px;
-}
+  width: 30px;
+	height: 30px;
+  text-align: center;
+  font-size: 12px;
+  display: inline-block;
+	cursor: pointer;
+	margin-right: 7px;
+  vertical-align: top;
+  opacity: .5;
 
-.target-selected{
-	background-color: black;
-	color: white;
+  &.target-selected{
+    border-bottom: 2px solid;
+    padding-bottom: 5px;
+    height: 35px;    
+    opacity: 1;
+  }
 }
 
 .wellCircle {
@@ -285,7 +371,7 @@ li {
 	cursor: pointer;
     padding: 0;
     margin: 0;
-    border: 1px solid #ccc;
+    border: 1px solid #000;
     //width: 120px;
     border-radius: 3px;
     overflow: hidden;
@@ -313,22 +399,51 @@ li {
 .header-plate-layout{
     height: 50px;
     box-shadow: 0 2px 3px #aaa;
+    background: #fff;
+    padding: 0 15px;
+    z-index: 1000;
 
     &::after{
         content: ' ';
         clear: both;
     }    
-
-    h4{
-        font-family: 'dinot-bold';
-        font-size: 13px;
-        margin: 0;
-        line-height: 50px;
-    }
 }
 
 .experiment-info{
   float: right;
   line-height: 50px;
   font-family: 'dinot';
+}
+
+.plate-layout-wrapper{
+  background: #eee;
+
+  .plate-layout-box{
+    flex-grow: 1;
+    position: relative;
+    overflow: auto;    
+    .plate-layout-details{
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      min-width: 1200px;
+      min-height: 650px;
+      .plate-layout-frame{
+        width: 1200px;
+        height: 650px;
+        margin: auto;
+        position: relative;
+      }
+    }
+  }
+}
+
+.section-title{
+  .clear-link{
+    color: #E02127;
+    position: absolute;
+    right: 20px;
+    top: 10px;    
+    cursor: pointer;
+  }
 }
