--- a/frontend/javascripts/app/views/plate-layout.html
+++ b/frontend/javascripts/app/views/plate-layout.html
@@ -29,7 +29,7 @@ limitations under the License.
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 header-plate-layout">
                 <h4 class="XB1B" style="display:inline-block; line-height: 50px; margin: 0;">Well Layout</h4>
-                <!-- <span class="experiment-info">Using standards from <b>{{experiment.name}}</b></span> -->
+                <span class="experiment-info XB1" ng-show="standard_experiment">Using standards from <b>{{standard_experiment.name}}</b></span>
             </div>
 
             <div class="plate-layout-box">
@@ -51,7 +51,15 @@ limitations under the License.
                                                 {{ rowCharacters[row.index] }}
                                             </label>
                                         </td>
-                                        <td ng-repeat="col in columns" class="well-switch" ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" ng-mousedown="dragStart($event, 'well', i)" ng-mousemove="dragged($event, 'well', i)" ng-mouseup="dragStop($event, 'well', i)" ng-class="{selected: well.selected, active: well.active}" ng-style="getWellStyle(row, col, well, i)">
+                                        <td 
+                                            class="well-switch"
+                                            ng-repeat="col in columns" 
+                                            ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" 
+                                            ng-mousedown="dragStart($event, 'well', i)" 
+                                            ng-mousemove="dragged($event, 'well', i)" 
+                                            ng-mouseup="dragStop($event, 'well', i)" 
+                                            ng-class="{selected: well.selected, active: well.active}" 
+                                            ng-style="getWellStyle(row, col, well, i)">
                                             <div class="well-switch-container" ng-style="getWellContainerStyle(row, col, well, i)">
                                                 <div class="ct-cq-container" ng-if="row.index == 0">
                                                     <div class="sample-name XB1B" ng-class="{'no-sample-set': wellInf[col.index].sample == 'Choose a Sample'}"> {{(wellInf[col.index].sample == 'Choose a Sample') ? 'No Sample' : wellInf[col.index].sample}} </div>
@@ -149,9 +157,12 @@ limitations under the License.
                                             <option ng-repeat="option in samples" value="{{option.id}}">{{option.name}}</option>
                                         </select> -->
 
-                                        <p class="testing-clicking XB1" ng-click="openSampleOptions()">{{sampleSelected}}<span class="span-arrow-down" ng-click="openSampleOptions()"></span></p>
+                                        <p class="testing-clicking XB1" ng-click="openSampleOptions()"
+                                            style="background-position: 165px 15px;" 
+                                        >{{sampleSelected}}</p>
                                     </div>
-                                    <div ng-class="{'hiding-div':!showSampleOptions }" class="options-div samples-div">
+                                    <div ng-class="{'hiding-div':!showSampleOptions }" class="options-div samples-div"
+                                        style="display: none;">
                                         <ul ng-if = "samples.length">
                                             <li ng-class="{active: sampleSelectedId == option.id}" class="XB1" ng-repeat="option in samples" ng-click="assignSamples(option.id,option.name)" >{{option.name}}</li>
                                         </ul>
@@ -164,7 +175,7 @@ limitations under the License.
                                 <div class="inline-block" style="width: 75%;">
                                     <div>
                                         <div class="inline-block" ng-class="{opacityLess: !selectionMade}" 
-                                            style="height:100px; width: 42%;padding: 0 20px;">
+                                            style="width: 42%;padding: 0 20px;">
                                             <div class="section-title">                                        
                                                 <h4 class="XB1B" ng-if="is_dual_channel">Ch 1 Target</h4>
                                                 <h4 class="XB1B" ng-if="!is_dual_channel">Target</h4>
@@ -178,13 +189,15 @@ limitations under the License.
                                                     <option ng-repeat="option in targets1" value="{{option.id}}">{{option.name}}</option>
                                                 </select> -->
 
-                                                <p class="testing-clicking XB1" ng-click="openTarget1Options()">
-                                                    <span class="span-target-color" ng-style="{'background-color': target1SelectedColor}"></span>{{target1Selected}}
-                                                    <span class="span-arrow-down" ng-click="openTarget1Options()"></span>
+                                                <p class="testing-clicking XB1" ng-click="openTarget1Options()"
+                                                    style="background-position: 199px 15px;" 
+                                                >
+                                                    <span class="span-target-color" ng-style="{'background-color': target1SelectedColor}"></span>{{target1Selected}}                                                    
                                                 </p>
 
                                             </div>
-                                            <div ng-class="{'hiding-div':!showTarget1Options }" class="options-div targets1-div">
+                                            <div ng-class="{'hiding-div':!showTarget1Options }" class="options-div targets1-div" 
+                                                style="display: none;">
                                                 <ul>
                                                     <li ng-class="{active: target1SelectedId == option.id}" class="XB1" ng-repeat="option in targets1" ng-click="assignTarget(option.id, '1', option.name)" >
                                                         <span class="span-target-color" ng-style="{'background-color': option.color}"></span>{{option.name}}</li>
@@ -193,7 +206,7 @@ limitations under the License.
 
                                         </div>
 
-                                        <div class="inline-block" ng-class="{'disabled-clicking':!enableTarget1Type}" style="height:100px; width: 33%;padding: 0 20px;">
+                                        <div class="inline-block" ng-class="{'disabled-clicking':!enableTarget1Type}" style="width: 33%;padding: 0 20px;">
                                             <div class="section-title">                                        
                                                 <h4 class="XB1B">Type</h4>
                                                 <span ng-click="clearTargetWellsByType('Target1')" class="XB1M clear-link" ng-show="selectionMade && selectedCountByTargetType('Target1')">Clear</span>
@@ -220,11 +233,12 @@ limitations under the License.
                                             <input class="quantity-input XB1" type="text" ng-model="target1Quantity.value" 
                                                 ng-blur="assignTargetQuantity()"
                                                 ng-keydown="$event.keyCode === 13 && assignTargetQuantity()"
+                                                ng-readonly="!enableTarget1Qty"
                                                 format-number />
 
                                         </div>                                        
                                     </div>
-                                    <div ng-if="is_dual_channel">
+                                    <div ng-if="is_dual_channel" style="margin-top: 20px;">
                                         <div class="inline-block" ng-class="{opacityLess: !selectionMade}" 
                                             style="width: 42%;padding: 0 20px;">
                                             <div class="section-title">                                        
@@ -238,10 +252,11 @@ limitations under the License.
                                                     <option value=0>Select a target</option>
                                                     <option ng-repeat="option in targets2" value="{{option.id}}">{{option.name}}</option>
                                                 </select> -->
-                                                <p class="testing-clicking XB1"><span class="span-target-color" ng-style="{'background-color': target2SelectedColor}"></span>{{target2Selected}}<span class="span-arrow-down"></span></p>
+                                                <p class="testing-clicking XB1" style="background-position: 199px 15px;"><span class="span-target-color" ng-style="{'background-color': target2SelectedColor}"></span>{{target2Selected}}</p>
 
                                             </div>
-                                            <div ng-class="{'hiding-div':!showTarget2Options }" class="options-div targets2-div">
+                                            <div ng-class="{'hiding-div':!showTarget2Options }" class="options-div targets2-div"
+                                                style="display: none;">
                                                 <ul>
                                                     <li ng-class="{active: target2SelectedId == option.id}" ng-repeat="option in targets2" ng-click="assignTarget(option.id, '2', option.name)"  class="XB1">
                                                         <span class="span-target-color" ng-style="{'background-color': option.color}"></span>{{option.name}}</li>
@@ -251,7 +266,7 @@ limitations under the License.
                                         </div>
 
                                         <div class="inline-block" ng-class="{'disabled-clicking':!enableTarget2Type}" 
-                                            style="height:100px; width: 33%;padding: 0 20px;">
+                                            style="width: 33%;padding: 0 20px;">
                                             <div class="section-title">                                        
                                                 <h4 class="XB1B">Type</h4>
                                                 <span ng-click="clearTargetWellsByType('Target2')" class="XB1M clear-link" ng-show="selectionMade && selectedCountByTargetType('Target2')">Clear</span>
@@ -279,6 +294,7 @@ limitations under the License.
                                             <input class="quantity-input XB1" type="text" ng-model="target2Quantity.value" 
                                             ng-blur="assignTarget2Quantity()" 
                                             ng-keydown="$event.keyCode === 13 && assignTargetQuantity()"
+                                            ng-readonly="!enableTarget2Qty"
                                             format-number />
                                         </div>
                                     </div>
