--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -278,13 +278,31 @@ H3-Amplification {
 .XB1B {
   font-family: "dinot-bold";
   font-size: 13px;
-  line-height: 16.25px;
+  line-height: 16.25px;  
 }
 
 .XB1M {
   font-family: "dinot-medium";
   font-size: 13px;
-  line-height: 16.25px;
+  line-height: 16.25px;  
+}
+
+.XB2 {
+  font-family: "dinot-regular";
+  font-size: 15px;
+  line-height: 20px;  
+}
+
+.XB2B {
+  font-family: "dinot-bold";
+  font-size: 15px;
+  line-height: 20px;  
+}
+
+.XB2M {
+  font-family: "dinot-medium";
+  font-size: 15px;
+  line-height: 20px;  
 }
 
 .XG1 {
